fixed spacing for mobile UI

--- a/src/Components/Pages/Landing/Landing.scss
+++ b/src/Components/Pages/Landing/Landing.scss
@@ -66,8 +66,10 @@
   }
 
   &__cta {
-    display: block !important;
-    width: 100%;
+    box-sizing: border-box;
+    display: flex !important;
+    padding: 1rem 1.25rem !important;
+    width: 100% !important;
   }
 }
 
