--- a/src/Components/Pages/PreFlow/PreFlow.scss
+++ b/src/Components/Pages/PreFlow/PreFlow.scss
@@ -200,7 +200,11 @@
   min-width: 227px;
 
   &--full {
-    width: 100%;
+    box-sizing: border-box;
+    display: flex !important;
+    justify-content: center;
+    padding: 1rem 1.25rem !important;
+    width: 100% !important;
   }
 }
 
